# apisec-inc_AI-Surface

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  false-negative.yml  false-positive.yml  feature-request.yml
.github/action/: entry.py
.github/workflows/: example-pr-check.yml  publish.yml  security-scan.yml  self-test.yml
docs/: ARCHITECTURE.md  CI_INTEGRATION.md  COMPLIANCE.md  DETECTORS.md  LANGUAGE_SUPPORT.md  PRIVACY.md  SCHEMA_v1.md  STATE_OF_AI_SURFACE.md
examples/: README.md
examples/demo-app/: .env.example  .mcp.json  README.md  litellm.config.yaml
examples/demo-app/deploy/: bedrock.tf  vllm-embeddings.yaml
examples/demo-app/src/: api.py  chat_agent.py  knowledge_base.py  llm_service.py  orders_mcp_server.py  support_workflow.py
examples/integrations/: circleci.yml  gitlab-ci.yml  pre-commit-hook.sh
examples/sample-outputs/: pr-comment.md  report.json  report.md  terminal.txt
examples/workflows/: basic.yml  custom-risk-threshold.yml  fail-on-risk.yml  scan-on-main.yml
fixtures/: demo_report.json  generate_demo.py  generate_sample.py  sample_report.json
src/ai_surface/: __init__.py  audits.py  cli.py  cross_promo.py  diff.py  dispositions.py  frameworks.py  observability.py  orchestrator.py  oversight.py  pii.py  repo.py  types.py  ui_server.py
src/ai_surface/data/: __init__.py
src/ai_surface/data/mcp/: __init__.py  api_patterns.py  model_patterns.py  owasp_llm.py  registry.py  risk_definitions.py  secret_patterns.py
src/ai_surface/detectors/: __init__.py  agent_frameworks.py  ai_infra.py  api_endpoints.py  env_keys.py  llm_sdks.py  mcp_audit.py  mcp_servers.py  model_gateways.py  vector_rag.py
src/ai_surface/reporters/: __init__.py  cyclonedx_reporter.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py  terminal_reporter.py
src/ai_surface/ui/: README.md  ai-bom.json  app.js  index.html  report.json  styles.css
src/ai_surface/utils/: __init__.py  markdown_safety.py  specs.py  walk.py
tests/: test_agent_frameworks.py  test_ai_infra.py  test_api_endpoints.py  test_audits.py  test_cli.py  test_cross_promo.py  test_cross_promo_bridges.py  test_cyclonedx.py  test_diff.py  test_dispositions.py  test_e2e.py  test_edge_cases.py  test_env_keys.py  test_frameworks.py  test_gate.py  test_golden_app.py  test_llm_sdks.py  test_markdown_safety.py  test_mcp_audit.py  test_mcp_reach.py  test_mcp_servers.py  test_model_gateways.py  test_observability.py  test_orchestrator.py  test_oversight.py  test_pii.py  test_redos.py  test_repo_scan.py  test_reporters.py  test_sarif.py  test_ui_server.py  test_vector_rag.py  test_walk.py
tests/fixtures/agents/: anthropic_tools.py  clean.py  crewai_research.py  langchain_refund.py  strands_param_hydration.py
tests/fixtures/ai_infra/compose_ollama/: docker-compose.yml
tests/fixtures/ai_infra/dockerfile_serve/: Dockerfile
tests/fixtures/ai_infra/dockerfile_vllm/: Dockerfile
tests/fixtures/ai_infra/helm_vllm/: values.yaml
tests/fixtures/ai_infra/k8s_clean/: deployment.yaml
tests/fixtures/ai_infra/k8s_ollama/: deployment.yaml
tests/fixtures/api_endpoints/express/: routes.js
tests/fixtures/api_endpoints/fastapi/: main.py
tests/fixtures/api_endpoints/spec/: openapi.yaml
tests/fixtures/e2e_app/: .mcp.json  openapi.yaml
tests/fixtures/e2e_app/app/: main.py
tests/fixtures/env_keys/clean/: .env
tests/fixtures/env_keys/with_export/: .envrc
tests/fixtures/env_keys/with_keys/: .env  .env.production
tests/fixtures/gateways/clean/: foo.py
tests/fixtures/gateways/litellm_proxy/: config.yaml
tests/fixtures/gateways/portkey_python/: app.py
tests/fixtures/gateways/terraform_bedrock/: main.tf
tests/fixtures/golden_app/: .env  .mcp.json  api.py  assistant.ts  knowledge.py  prompts.py  support_agent.py
tests/fixtures/llm_sdks/anthropic_py/: agent.py
tests/fixtures/llm_sdks/anthropic_ts/: client.ts
tests/fixtures/llm_sdks/clean/: utils.py
tests/fixtures/llm_sdks/openai_py/: summarize.py
tests/fixtures/mcp/empty/: README.txt  regular_app.py
tests/fixtures/mcp/with_config/: mcp.json
tests/fixtures/mcp/with_source/: mcp_orders_server.py
ui/: README.md  app.js  index.html  report.json  styles.css
