[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-surface"
version = "1.0.0"
description = "Map your application's AI attack surface from source: MCP servers (with security audit), agent frameworks, LLM call sites, model gateways, AI infrastructure, provider keys, and HTTP/OpenAPI endpoints. Local, static, CI-friendly, with a visual UI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "APIsec", email = "security@apisec.ai" }
]
keywords = ["ai", "devops", "mcp", "langchain", "openai", "anthropic", "agent", "inventory", "ci", "api", "openapi", "security", "attack-surface"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "typer>=0.9.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "pathspec>=0.11.0,<1.0.0",
    # OpenAPI/Swagger spec parsing (api_endpoints detector) and YAML configs.
    # Detectors degrade gracefully if absent, but ship it for robust parsing.
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ai-surface = "ai_surface.cli:app"

[project.urls]
Homepage = "https://github.com/apisec-inc/AI-Surface"
Documentation = "https://github.com/apisec-inc/AI-Surface#readme"
Issues = "https://github.com/apisec-inc/AI-Surface/issues"
Source = "https://github.com/apisec-inc/AI-Surface"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_surface"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# cli.py uses classic typing (Optional, List, Dict) because Typer evaluates
# annotations at runtime, and PEP 604 (X | None) is not available in Python 3.9
# which we declare as the minimum supported version.
"src/ai_surface/cli.py" = ["UP006", "UP035", "UP045"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]
addopts = "-ra"
